<resources>
    <string name="app_name">Homework_10</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="number_of_repositories">Repositories :  </string>
    <string name="gists">Gists :  </string>
    <string name="user_url">Url :</string>
    <string name="load_failed">Load failed, please try again later!</string>
</resources>
